# mcp-camera-watch

./: .gitignore  DEPLOY.md  LICENSE  README.md  SECURITY.md  SPEC.md  pyproject.toml
examples/: cameras.example.json
mcp_camera/: __init__.py  __main__.py  capture.py  config.py  evaluator.py  server.py  web.py
mcp_camera/web_assets/: __init__.py  app.js  index.html  styles.css
scripts/: capture_macos_camera.swift  install_local.sh  install_openclaw_e2e.sh  macos-camera-info.plist  smoke_mcp.sh  start_ui.sh
tests/: test_capture.py  test_config.py  test_evaluator.py  test_server.py  test_web.py
